--- a/frontend-websocket/index.html
+++ b/frontend-websocket/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
     <title>Chat Application with Websocket</title>
     <link href="style.css" rel="stylesheet" />
   </head>
