update name of application

--- a/frontend-websocket/index.html
+++ b/frontend-websocket/index.html
@@ -6,7 +6,7 @@
     <link href="style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>Chat Application With Websocket</h1>
+    <h1>Real Time Chat Application</h1>
     <div id="messages"></div>
     <div id="inputRow">
       <input
